<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/operation_textView_calcul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_textView_calcul"
            android:textSize="26sp"/>

        <EditText
            android:id="@+id/operation_editText_reponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/operation_editText_hintReponse"
            android:textSize="26sp"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/operation_button_suivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/operation_button_suivant"/>

    <TextView
        android:id="@+id/operation_textView_nbOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/operation_textView_nbOperations"/>

</LinearLayout>