<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addUser_text_nouveauCompte"
        android:layout_gravity="center"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/addUser_edit_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addUser_edit_prenom"/>

    <EditText
        android:id="@+id/addUser_edit_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addUser_edit_nom"/>

    <Button
        android:id="@+id/addUser_button_creer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_button_creer"
        android:textSize="15sp"/>

</LinearLayout>