<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_margin="16dp">
    <!-- 16dp est la valeur de marge standard MAIS il faudrait faire en sorte de l'adapter aux plus grand écrans -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/main_textView_recherche"
        android:textSize="26sp"/>

    <ListView
        android:id="@+id/main_listView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="true"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"/>

    <Button
        android:id="@+id/main_button_valider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/valider"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/main_button_anonyme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_button_sansCompte"
        android:textSize="15sp"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/main_button_creerCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_button_creerCompte"
        android:textSize="15sp"/>

</LinearLayout>